[package]
name = "msproject-merge"
version = "1.0.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"
calamine = "0.26"
rust_xlsxwriter = "0.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.14"
quick-xml = { version = "0.31", features = ["serialize"] }

